--- a/src/Resources/views/storefront/component/product/card/box-standard.html.twig
+++ b/src/Resources/views/storefront/component/product/card/box-standard.html.twig
@@ -12,10 +12,10 @@
 
                 {% block vis_product_box_button %}
                     <button class="vis-search-btn btn mb-0">
-                        <div id="text" style="line-height:15px">
-                            Click for <br> visual <br> search
-                        </div>
-                        {# Here is the icon: <span class="vis-search-icon"> {% sw_icon 'photocamera' style {'color': 'primary', 'class': ' text-primary'} %} </span> #}
+                        {# Text alternative <div id="text" style="line-height:15px"> Click for <br> visual <br> search </div> #}
+                        <span class="vis-search-icon">
+                            {% sw_icon 'eye-open' style {'color': 'primary', 'class': ' text-primary'} %}
+                        </span>
                     </button>
                 {% endblock %}
 
