--- a/src/Resources/views/storefront/layout/header/search.html.twig
+++ b/src/Resources/views/storefront/layout/header/search.html.twig
@@ -20,7 +20,7 @@
                             <label for="visually-search-image"
                                    class="vis-search-btn btn mb-0">
                             <span class="vis-search-icon">
-                                {% sw_icon 'photocamera' style {'color': 'primary', 'class': ' text-primary'} %}
+                                {% sw_icon 'eye-open' style {'color': 'primary', 'class': ' text-primary'} %}
                             </span>
                             </label>
                         {% endblock %}
